Allow listing globally ignored files if ignoring is overridden; readfile checks whether file is a directory